fixed spacing on the pricing page.

--- a/src/pages/pricing/index.module.css
+++ b/src/pages/pricing/index.module.css
@@ -1,5 +1,5 @@
 #section-2{
-    padding: 3em 12em;
+    padding: 3em 6em;
 }
 
 .pricing{
@@ -7,12 +7,11 @@
     flex-direction: row;
     justify-items: center;
     align-items: center;
-    margin: 6em 0;
+    margin: 6em 8em;
 }
 
 .pricing-title{
     flex: 1;
-    margin-right: 8em;
 }
 
 .pricing-title h2{
@@ -24,7 +23,8 @@
 }
 
 .pricing-info{
-    flex: 3
+    flex: 3;
+    padding-left: 15px;
 }
 
 #mt-16{
@@ -37,7 +37,11 @@
         text-align: center;
     }
     .pricing-title, .pricing-info{
-        width: 100%
+        width: 100%;
+    }
+
+    .pricing{
+        margin: 6em 2em;
     }
 }
 
@@ -48,6 +52,10 @@
 }
 
 @media (max-width: 400px){
+    .pricing{
+        margin: 6em 1em;
+    }
+
     .pricing-title h2{
         font-size: 18px;
     }
